# frankx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ____init_____8py.html  _r_e_a_d_m_e_8md.html  affine_8cpp.html  affine_8hpp.html  affine_8hpp_source.html  annotated.html  breaks_8py.html  classes.html  classfrankx_1_1_circle_segment-members.html  classfrankx_1_1_circle_segment.html  classfrankx_1_1_condition-members.html  classfrankx_1_1_condition.html  classfrankx_1_1_gripper-members.html  classfrankx_1_1_gripper.html  classfrankx_1_1_joint_motion-members.html  classfrankx_1_1_joint_motion.html  classfrankx_1_1_line_segment-members.html  classfrankx_1_1_line_segment.html  classfrankx_1_1_measure-members.html  classfrankx_1_1_measure.html  classfrankx_1_1_motion.html  classfrankx_1_1_path-members.html  classfrankx_1_1_path.html  classfrankx_1_1_robot-members.html  classfrankx_1_1_robot.html  classfrankx_1_1_segment-members.html  classfrankx_1_1_segment.html  classfrankx_1_1_spline_segment-members.html  classfrankx_1_1_spline_segment.html  classfrankx_1_1_stateful_functor-members.html  classfrankx_1_1_stateful_functor.html  classfrankx_1_1gripper_1_1_gripper-members.html  classfrankx_1_1gripper_1_1_gripper.html  classfrankx_1_1robot_1_1_robot-members.html  classfrankx_1_1robot_1_1_robot.html  classgrasping_1_1_grasp.html  (+351 more)
.github/workflows/: CI.yml  build_and_test.yml  build_wheels.yml  ci.yml  documentation.yml  publish.yml
cmake/: FindEigen3.cmake  FindReflexxes.cmake
doc/: Doxyfile
docker/: Dockerfile
examples/: Get_position_during_robot_mouvement.py  async_target.py  asynchronous.py  brakes.py  breaks.py  force_control.py  grasping.cpp  grasping.py  home.cpp  home.py  impedance.py  kinematics.py  linear.cpp  linear.py  linear_non_rt.cpp  linear_non_rt.py  minimal_bug.cpp  path.py  reaction.py  read.py  simple.cpp  simple.py  util.cpp  waypoints.py
frankx/: __init__.py  gripper.py  robot.py
franky/: __init__.py  gripper.py  motion.py  reaction.py  robot.py  robot_web_session.py
include/: franky.hpp
include/frankx/: affine.hpp  condition.hpp  frankx.hpp  geometry.hpp  gripper.hpp  kinematics.hpp  measure.hpp  motion.hpp  motion_data.hpp  motion_generator.hpp  motion_impedance.hpp  motion_impedance_generator.hpp  motion_joint.hpp  motion_joint_generator.hpp  motion_path.hpp  motion_path_generator.hpp  motion_waypoint.hpp  motion_waypoint_generator.hpp  quintic_generator.hpp  reaction.hpp  robot.hpp  utils.hpp  waypoint.hpp
include/franky/: affine.hpp  control_signal_type.hpp  frankx.hpp  franky.hpp  gripper.hpp  kinematics.hpp  motion_generator.hpp  motion_impedance_generator.hpp  motion_joint_generator.hpp  motion_path_generator.hpp  motion_waypoint_generator.hpp  relative_dynamics_factor.hpp  robot.hpp  robot_pose.hpp  scope_guard.hpp  types.hpp  util.hpp  waypoint.hpp
include/franky/motion/: cartesian_impedance_motion.hpp  cartesian_motion.hpp  cartesian_waypoint_motion.hpp  condition.hpp  exponential_impedance_motion.hpp  impedance_motion.hpp  joint_motion.hpp  joint_waypoint_motion.hpp  linear_impedance_motion.hpp  linear_motion.hpp  measure.hpp  motion.hpp  motion_generator.hpp  motion_impedance.hpp  motion_joint.hpp  motion_path.hpp  motion_waypoint.hpp  reaction.hpp  reference_type.hpp  stop_motion.hpp  todo.hpp  waypoint_motion.hpp
include/franky/path/: aggregated_path.hpp  linear_path.hpp  path.hpp  quartic_blend_path.hpp  segment.hpp  time_parametrization.hpp  trajectory.hpp  way_point_path.hpp
include/franky/robot/: kinematics.hpp  measure.hpp  motion_data.hpp  reaction.hpp  robot_state.hpp
include/movex/: affine.hpp  path.hpp  robot_state.hpp  waypoint.hpp
include/movex/motion/: motion_impedance.hpp  motion_joint.hpp  motion_path.hpp  motion_waypoint.hpp
include/movex/otg/: parameter.hpp  quintic.hpp  reflexxes.hpp  ruckig.hpp  smoothie.hpp
include/movex/otg/ruckig/: wolfram.hpp
include/movex/path/: path.hpp  segment.hpp  time_parametrization.hpp  trajectory.hpp
include/movex/robot/: kinematics.hpp  measure.hpp  motion_data.hpp  reaction.hpp  robot_state.hpp
include/otgx/: parameter.hpp  quintic.hpp  quintic_generator.hpp  reflexxes.hpp  ruckig.hpp  smoothie.hpp
include/tl/: optional.hpp
notebooks/: kinematics.nb  polynomial-blending.nb  quintic-spline.nb  quintic.nb  qunitic-spline.nb  ruckig.nb
python/: concurrent_queue.hpp  macros.hpp  python.cpp  sequential_executor.cpp  sequential_executor.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+95 more)
src/: affine.cpp  condition.cpp  frankx_python.cpp  gripper.cpp  kinematics.cpp  motion_impedance.cpp  motion_joint.cpp  otgx_python.cpp  path.cpp  python.cpp  reaction.cpp  relative_dynamics_factor.cpp  robot.cpp  robot_pose.cpp  waypoint.cpp
src/frankx/: gripper.cpp  kinematics.cpp  motion_impedance.cpp  python.cpp  robot.cpp  robot_impedance_motion.cpp  robot_joint_motion.cpp  robot_path_motion.cpp  robot_waypoint_motion.cpp
src/franky/: gripper.cpp  kinematics.cpp  python.cpp  robot.cpp
src/motion/: cartesian_impedance_motion.cpp  cartesian_motion.cpp  cartesian_waypoint_motion.cpp  condition.cpp  exponential_impedance_motion.cpp  impedance_motion.cpp  joint_motion.cpp  joint_waypoint_motion.cpp  linear_impedance_motion.cpp  linear_motion.cpp  measure.cpp  motion.cpp  motion_generator.cpp  reaction.cpp  waypoint_motion.cpp
src/movex/: affine.cpp  path.cpp  python.cpp  ruckig.cpp
src/path/: aggregated_path.cpp
test/: function-test.cpp  joint_plot.py  kinematics-test.cpp  null-space.py  otg-test.cpp  otg_plot.py  path-test.cpp  path_plot.py  py-test.py  quintic_plot.py  robot-test.cpp  trajectory_plot.py  unit-test.cpp
